--- a/src/app/views/f931/f931.component.html
+++ b/src/app/views/f931/f931.component.html
@@ -1,7 +1,6 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar class="custom-toolbar">
     <div class="search-container">
-      <!-- Flecha de atrás al lado de la barra de búsqueda -->
       <ion-buttons slot="start">
         <ion-back-button
           defaultHref="/"
@@ -16,6 +15,21 @@
 
     <ion-icon name="cart-outline" class="icon-cart"></ion-icon>
     <p class="address-text">Dirección</p>
+  </ion-toolbar>
+</ion-header> -->
+
+
+<ion-header>
+  <ion-toolbar class="custom-toolbar">
+    <div class="search-cart-container">
+      <div class="search-container">
+        <ion-icon name="search" class="icon-search"></ion-icon>
+        <ion-input placeholder="Buscar producto o servicio"></ion-input>
+      </div>
+      <ion-icon name="cart-outline" class="icon-cart"></ion-icon>
+    </div>
+  <p class="address-text">Acá iría la dirección</p>
+
   </ion-toolbar>
 </ion-header>
 
