--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,17 @@
 <ion-header>
   <ion-toolbar class="custom-toolbar">
-    <div class="search-container">
-      <ion-icon name="search" class="icon-search"></ion-icon>
-      <ion-input placeholder="Buscar producto o servicio"></ion-input>
+    <div class="search-cart-container">
+      <div class="search-container">
+        <ion-icon name="search" class="icon-search"></ion-icon>
+        <ion-input placeholder="Buscar producto o servicio"></ion-input>
+      </div>
+      <ion-icon name="cart-outline" class="icon-cart"></ion-icon>
     </div>
-    <ion-icon name="cart-outline" class="icon-cart"></ion-icon>
-    <p class="address-text">Dirección</p>
-<p class="address-text" (click)="login()"   *ngIf="!isLoggedIn">login de prueba</p>
+  <p class="address-text">Acá iría la dirección</p>
+  <p class="address-text" (click)="login()" *ngIf="!isLoggedIn">Login de prueba</p>
   </ion-toolbar>
 </ion-header>
+
 
 <ion-content>
   <!-- Carrusel de imágenes -->
@@ -86,7 +89,41 @@
   </div>
 
   <!-- deslogueado -->
-  <div class="contenedor-principal">
+
+
+<div class="contenedor-principal">
+  <div class="section-deslogueado" *ngIf="!isLoggedIn">
+    <div class="item-deslogueado">
+      <img
+        src="../../assets/icon/registrar.jpeg"
+        alt="Crea tu cuenta"
+        class="image-deslogueado"
+      />
+      <p class="name-deslogueado">Crea tu cuenta</p>
+    </div>
+    <div class="item-deslogueado">
+      <img
+        src="../../assets/icon/ubi.jpeg"
+        alt="Ingresar ubicación"
+        class="image-deslogueado"
+      />
+      <p class="name-deslogueado">Ingresar ubicación</p>
+    </div>
+    <div class="item-deslogueado">
+      <img
+        src="../../assets/icon/carrito.jpeg"
+        alt="Más vendidos"
+        class="image-deslogueado"
+      />
+      <p class="name-deslogueado">Más vendidos</p>
+    </div>
+  </div>
+</div>
+
+
+
+
+  <!-- <div class="contenedor-principal">
     <div class="section-deslogueado" *ngIf="!isLoggedIn">
       <div class="item-deslogueado">
         <img
@@ -113,7 +150,7 @@
         <p class="name-deslogueado">Más vendidos</p>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- Recomendados -->
   <div class="recommended-section" *ngIf="isLoggedIn">
@@ -327,7 +364,7 @@
                 <!-- <ion-card class="marca-card" *ngFor="let marca of marcas"> -->
                 <ion-card class="marca-card" >
                   <!-- <img [src]="marca.imagen" alt="{{ marca.nombre }}" /> -->
-                        <img href="../../assets/icon/celular-samsung-a04e-32-3gb-copper-ean-731835-removebg-preview.png"  />
+      <img src="../../assets/icon/celular-samsung-a04e-32-3gb-copper-ean-731835-removebg-preview.png" alt="Banner 2" class="banner-image" />
 
                 </ion-card>
               </div>
